[project]
name = "dipraph-cli"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "galenseilis", email = "galen.seilis@seilis.ca"},
]
dependencies = [
    "networkx>=3.4.2",
    "matplotlib>=3.9.2",
]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "Apache-2.0"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
